# nebwalk

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_parallel_mace.py
benchmarks/h_cu111_mace_mp/: README.md
benchmarks/h_cu111_mace_mp/results/: cu111_fcc_to_fcc_metadata.json  cu111_fcc_to_hcp_metadata.json
benchmarks/h_cu111_mace_mp/scripts/: run_h_cu111_fcc_to_hcp.sh
docs/: linkedin_post.md  pypi_release.md
examples/: active_al_vacancy_emt.py  active_selection_logic.py  ag_vacancy_emt.py  ag_vacancy_mace.py  ag_vacancy_qe.py  al_diffusion_emt.py  al_diffusion_qe.py  al_vacancy_emt.py  al_vacancy_mace.py  al_vacancy_macemp.py  al_vacancy_qe.py  al_vacancy_qe_suite.py  au_vacancy_emt.py  au_vacancy_macemp.py  cu_adatom_cu100_emt.py  cu_vacancy_emt.py  cu_vacancy_mace.py  cu_vacancy_qe.py  ethane_egret.py  ethane_geodesic_demo.py  fe_vacancy_qe.py  li2o_vacancy_macemp.py  li_vacancy_qe.py  mg_vacancy_macemp.py  mg_vacancy_mgo_macemp.py  mg_vacancy_qe.py  mlip_assisted_neb_emt.py  mlip_assisted_neb_mace.py  mo_vacancy_mace.py  mo_vacancy_qe.py  morse_h3.py  nebwalk_demo.ipynb  ni_adatom_ni100_emt.py  ni_vacancy_emt.py  ni_vacancy_mace.py  ni_vacancy_qe.py  pd_vacancy_emt.py  pd_vacancy_mace.py  pt_vacancy_emt.py  run.sh  (+31 more)
examples/v8/: repro_v8_benchmark_suite.py  run_v8.sh  v8_002_al100_adatom_emt.py  v8_005_fe_bcc_vacancy_emt.py  v8_007_ag111_adatom_emt.py  v8_010_sro_sr_vacancy_mace.py  v8_014_tio2_o_vacancy_mace.py  v8_015_ceo2_ce_vacancy_mace.py  v8_018_tin_n_vacancy_mace.py  v8_027_h_pd_interstitial_mace.py  v8_029_n_fe100_surface_mace.py  v8_030_n_ru0001_surface_mace.py  v8_032_o_cu111_surface_mace.py  v8_033_co_cu100_surface_mace.py  v8_036_propane_torsion_egret.py  v8_038_acetaldehyde_methyl_torsion_egret.py
nebwalk/: __init__.py  active.py  engine.py  forces.py  interpolate.py  neb.py  optimize.py  output.py  qe.py  reproduce.py  selection.py
tests/: test_active.py  test_forces.py  test_idpp.py  test_interpolate.py  test_neb.py  test_parallel.py  test_qe.py  test_reproduce.py  test_selection.py  test_variable_k.py
