[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebwalk"
version = "0.1.0"
description = "Minimal Nudged Elastic Band (NEB) implementation for ASE-compatible calculators"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Md. Rifat Khandaker" }
]
requires-python = ">=3.9"
dependencies = [
    "ase>=3.22",
    "numpy>=1.21",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
test = ["pytest>=7"]
mace = ["mace-torch>=0.3"]

[project.urls]
Repository = "https://github.com/Rifat19R/nebwalk"

[tool.setuptools.packages.find]
where = ["."]
include = ["nebwalk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
