[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebwalk"
version = "0.4.0"
description = "Minimal Nudged Elastic Band (NEB) implementation for ASE-compatible calculators"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Md. Rifat Khandaker" }
]
requires-python = ">=3.9"
dependencies = [
    "ase>=3.22",
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
mace = ["mace-torch>=0.3"]
test = ["pytest>=7", "numpy"]
dev = ["nebwalk[test]", "ruff", "mypy"]

[project.urls]
Repository = "https://github.com/Rifat19R/nebwalk"

[tool.setuptools.packages.find]
where = ["."]
include = ["nebwalk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["nebwalk"]
